# craftip-crosscompiletest

./: .gitignore  Cargo.toml  Dockerfile  crosscompile.Dockerfile  crosscompile.sh  docker-compose.yml
.github/workflows/: compile.yml  mac.yml  windows.yml
client/: Cargo.toml
client-gui/: Cargo.toml  build.rs
client-gui/src/: backend.rs  gui_channel.rs  main.rs  updater.rs
client/src/: client.rs  connection_handler.rs  lib.rs  main.rs  structs.rs
client/src/gui/: api.rs  backend.rs  gui_channel.rs  login.rs  mod.rs
server/: Cargo.toml
server/src/: client_handler.rs  main.rs  process_socket.rs  proxy_handler.rs
shared/: Cargo.toml
shared/src/: addressing.rs  config.rs  crypto.rs  datatypes.rs  lib.rs  minecraft.rs  packet_codec.rs  proxy.rs  proxy_handler.rs  socket_packet.rs  test.rs  util.rs
src/: addressing.rs  client.rs  client_cli.rs  client_gui.rs  client_handler.rs  cursor.rs  datatypes.rs  main.rs  minecraft.rs  minecraft_versions.rs  packet_codec.rs  proxy.rs  proxy_handler.rs  server.rs  socket_packet.rs  test.rs  util.rs
src/gui/: api.rs  backend.rs  gui_channel.rs  gui_elements.rs  login.rs  mod.rs
