[package]
name = "minecraft-server-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1" }
thiserror = "1.0.38"
rand = "0.8.5"
bytes = "1.4.0"
futures = { version = "0.3.0", features = ["thread-pool"] }
tracing = "0.1.29"
