[workspace]
resolver = "2"
members = [
    "client",
    "client-gui",
    "server",
    "shared"
]


[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = true      # Enable integer overflow checks.
debug = false               # Disable debug information.
