[package]
name = "client-gui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78", features = [] }
tokio = { version = "1.35", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
eframe = { version = "0.24.1", features = ["persistence"]}
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = [] }


shared = { path = "../shared" }
client = { path = "../client" }

