[package]
name = "client-gui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78", features = [] }
tokio = { version = "1.35", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
eframe = { version = "0.25", features = ["persistence", "wgpu"]}
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = [] }
self_update = { version = "0.39.0", features = ["archive-zip", "compression-zip-deflate", "signatures"] }
tempfile = "3.9.0"
reqwest = "0.11.23"


shared = { path = "../shared" }
client = { path = "../client" }
image = "0.24.8"

[build-dependencies]
winres = "0.1"