[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1" }
thiserror = "1.0.38"
rand = "0.8.5"
bytes = "1.4.0"
futures = { version = "0.3.0", features = ["thread-pool"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
bincode = "1.3.3"
shared = { path = "../shared" }

