[package]
name = "shared"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1" }
thiserror = "1.0.53"
bytes = "1.5.0"
futures = { version = "0.3.0", features = ["thread-pool"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
bincode = "1.3.3"
anyhow = "1.0.78"
hex = "0.4.3"
base-x = "0.2.11"
ring = "0.17.7"
serde-big-array = "0.5.1"

[dev-dependencies]
rand = "0.8.5"
